fixed containers misalignment on levels

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,8 +24,8 @@ h2 {
     justify-content: space-around;
     align-items: top;  
     height: 75vh;   
-    width: 100%;         
-    padding: 2%;
+    width: 100%;    
+    margin-top: 2%;     
 }
 
 .left {
